--- a/Block II - Nonparametric inference/NPS-lab03_univariate_tests.Rmd
+++ b/Block II - Nonparametric inference/NPS-lab03_univariate_tests.Rmd
@@ -738,16 +738,280 @@ lines(delta_grid,power_perm_1,col='red')
 ```
 And observe that indeed the permutation test is more powerful!
 
-## Multiple testing
+
 
 ## Two-sample paired / one sample nonparametric test
 
-Let us change the setting. We have made the empirical assessments of coverage (type-I error) and power ($1 -$ type II error) for tests for two independent samples. What about the other cases?
+Let us change the setting. We have made the empirical assessments of coverage (type-I error) and power ($1 -$ type II error) for tests for two independent samples. What about the other cases? We may have a sample of a univariate distribution, or paired observations. To elaborate on this, we load the dataset of last year's February exam:
+
+```{r}
+data <- readRDS(file="./data/feb2024.rds")
+df1 <- data$df1
+df.tte <- data$df.tte
+SEED <- 2024
+B <- 1e3
+ALPHA <- 0.01
+
+months <- names(df1)[3:14]
+print(months)
+matplot(t(df1[, 3:14]), type="l", xlab="Month", ylab="Assignats value")
+axis(side=3,at=1:12,labels=months)
+
+```
+
+
+We assume the functions to be i.i.d statistical units. If you are doing the $5$-CFU version of the course, do not worry. This only means that data joined by the lines are paired.
+
+Let $X_{floréal}$ be the R.V. that denotes the price of $assignats$ and $\mathcal{X}_{floréal}$ the collected samples of that variable.
+
+
+### Sign test for the median of univariate data 
+
+We are interested in its median. Is it $100$? Id est, we perform the following test:
+$$
+H_0 = \{ \mathbb{P}[X_{floréal} > 100]  = 0.5 \}
+$$
+_versus_
+$$
+H_1 = \{ \mathbb{P} [X_{floréal} > 100] \neq 0.5 \}
+$$
+since data are univariate and i.i.d, we can apply a sign test. The test statistic is going to be:
+$$w* := max(w, N-w)$$
+where 
+$$
+w := \sum_{i=1}^{N} \mathbb{I}_{\{x_i > 100 \}}
+$$
+That is, the count of data points that are higher than the hypothesised median (naturally $x_i$ denotes the $i$th statistical unit present in the sample $\mathcal{X}_{floréal}$ and $N$ is the sample size).
+
+Assumptions:
+
+* Observations are i.i.d.
+* Under H0, the test statistic has the following property:
+
+$$
+w* \stackrel{H_0}{\sim} Binomial(N, 0.5)
+$$
+
+```{r}
+median.h0 <- 100
+N <- length(df1$Floréal)
+w <- sum(df1$Floréal > median.h0)
+w.star <- max(c(w, N - w))
+
+# plot distribution under H_0
+plot(0:N, dbinom(0:N, N, 0.5))
+# add value of test statistic obtained with the sample
+abline(v = c(w, N-w), col='red')
+
+```
+
+We calculate the p-value $p$ in the following way:
+$$
+p = \mathbb{P}_{H_0}[W^* \geq w^* ] = 2 \sum_{n=w*}^N \binom{N}{n}0.5^n(1-0.5)^{N-n}
+$$
+(we calculate the mass of the right tail of the binomial distribution using the value of the statistic obtained with the sample and multiply it by two since it is symmetric about $0.5n$)
+
+```{r}
+p.value <- 2*(1 - pbinom(w.star-1, N, 0.5, lower.tail = T) )
+p.value
+```
+Which can be computed manually:
+```{r, class.source="extracode"}
+
+bin.pmf <- function(x) (choose(N, x) * 0.5^x *(1-0.5)**(N-x))
+
+p.value <- 2 * (1 - sum(sapply(1:(w.star-1),  FUN=bin.pmf ))
+                )
+p.value
+```
+
+Moreover, is tantamount to ^[execute _?pbinom_ and look the lower.tail argument]:
+```{r}
+p.value <- 2*( pbinom(w.star-1, N, 0.5, lower.tail = F) )
+p.value
+```
+Or **much more simply**:
+```{r}
+binom.test(sum(w), N, p=0.5, alternative="two.sided",
+           conf.level = 1-ALPHA)
+```
+
+
+The p-value is practically zero (which is coherent with the fact the value we obtained of the statistic is positioned at the tails of the distribution), meaning we reject $H_0$ in favour of $H_1$: we have statistical evidence to assert that the median price of assignats is different from $100$. (Alternatively, we could state that the confidence interval obtained from the Binomial distribution does not contain the value under $H_0$ so we reject $H_0$).
+
+**Reminder**. Since we are using a discrete distribution for testing, there will be a finite quantity of achievable p-values, in this case dependent on the binomial distribution.
 
 
 
+### Sign test for the quantile of univariate data
 
-## Exploiting (multivariate) nonparametric depths
+What if we were interested in the $90$th quantile ($q_{90}$) of $X_{floréal}$? As mentioned in class, we can still use the sign test. We try with $q_{90}=105$:
+$$
+H_0 = \{ \mathbb{P}[X_{floréal} > 105]  = 0.9 \}
+$$
+_versus_
+$$
+H_1 = \{ \mathbb{P} [X_{floréal} > 105] \neq 0.9 \}
+$$
+since data are univariate and i.i.d, we can apply a sign test. 
+
+Having that:
+$$
+N-w \stackrel{H_0}{\sim} Binomial(N, .90)
+
+$$
+
+```{r}
+w <- N-sum(df1$Floréal > 105) ## ocio we don't take w*
+
+plot(0:N, dbinom(0:N, N, 0.9))
+abline(v = c(w), col='red')
+
+```
+Since the Binomial distribution is no longer symmetric (whenever its probability parameter is different from $0.5$), the calculation of the p-value is more complex, _i.e._ we cannot take one tail's mass and double it anymore ^[See https://en.wikipedia.org/wiki/Binomial_test for details]
+
+As we saw before, once we build the statistic, we can apply the function:
+```{r}
+binom.test(w, N, 0.90, alternative="two.sided", conf.level = 1-ALPHA)
+```
+We fail to reject $H_0$: we have no statistical evidence to conclude the $.90th$ quantile of $X_{floréal}$ is not $105$.
+
+#### Exercise
+
+Re-do the simulations of before, sampling from an univariate distribution, to verify if the power curve of Wicoxon's signed-rank test is higher than that of the sign test when doing inference on the median. 
+
+### Two-sample paired tests
+
+Whenever we have paired data, i.e $p$ random samples where each statistical unit is a measure of a same entity (think about the curves: for different months we have different measurements, but corresponding to a same curve). Say we have $X_{floréal}$ and $X_{prairial}$:
+
+If we are interested in 
+$$
+H_0: Med({X}_{floréal}-{X}_{prairial}) = 0 \, \, vs.\, \, H_1: ({X}_{floréal}-{X}_{prairial}) \neq 0
+$$
+we can just apply a **sign test** *OR* a Wilcoxon signed-rank test for the median to the univariate vector of differences $\mathcal{X}_{floréal}-\mathcal{X}_{prairial}$.
+
+For example, say we want to test whether there was an increase from _Floréal_ month to _Vendémmiaire_: we have 
+$$
+H_0: \mathbb{P}[{X}_{vendémmiaire} > {X}_{floréal}] = 0.5 \,\,  \bigg[MED({X}_{vendémmiaire}-{X}_{floréal})=0\bigg] \\
+vs\\
+H_1:\mathbb{P}[{X}_{vendémmiaire} > {X}_{floréal}] > 0.5 \,\,  \bigg[MED({X}_{vendémmiaire}-{X}_{floréal})>0\bigg]
+$$
+(note of course it is a one-sided test). It is actually quite simple! We treat ${X}_{vendémmiaire}-{X}_{floréal}$ as an univariate random variable (say $Y$) and that's it. 
+
+```{r}
+Y <- df1$Vendémmiaire - df1$Floréal
+
+# Prof. Vantini's code
+n <- length(Y)
+ranks <- rank(abs(Y))
+W.plus  <- sum(ranks[Y > 0])
+W.minus <- sum(ranks[Y < 0])
+
+W.plus
+W.minus
+n*(n+1)/2
+#W <- W.plus - W.minus 
+# W <- sum(sign(differences)*rank(abs(differences)))
+#W
+
+# MC computation of the p-value
+# Generation of W under the null hypothesis
+set.seed(24021979)
+W.sim <- numeric(B)
+for (k in 1:B)
+{
+  ranks.temp <- sample(1:n)
+  signs.temp <- 2*rbinom(n, 1, 0.5) - 1
+  W.temp <- sum(signs.temp*ranks.temp)
+  W.sim[k] <- W.temp
+}
+
+hist(W.sim, xlim=c(-n*(n+1)/2, n*(n+1)/2), breaks = 50)
+abline(v = W.plus, col='red')
+abline(v = 0, lwd=3)
+
+
+
+```
+
+Alternatively: 
+
+```{r}
+wilcox.test(x=df1$Vendémmiaire, y=df1$Floréal, paired=T, alternative = "greater")
+```
+
+
+## Multiple testing
+
+Let us retake the permutational t-test. Our only assumption is that the two samples $\mathcal{X}_1$ and $\mathcal{X}_2$ are independent of each other and conformed by iid observations. We may be interested in differences both in location and scale. The solution: build a "custom" test statistic that measures deviations in both:
+
+```{r}
+perm_t_test=function(x,y,iter=1e3, plot=T){
+  
+  T0 = max( c(median(y)/median(x), mad(y)/mad(x)) )
+  # alternative: mean(y)/mean(x) + sd(y)/sd(x)
+           
+  # NB use the ratio so that if H0 both should be 1
+  T_stat=numeric(iter) # a vector to store the values of each iteration
+  x_pooled=c(x,y) # pooled sample
+  n=length(x_pooled)
+  n1=length(x)
+ # print(sprintf("Using %s iterations to estimate the permutational distribution. There are actually %s possible permutations", iter, factorial(n)))
+  for(perm in 1:iter){ # loop for conditional MC
+    # permutation:
+    permutation <- sample(1:n)
+    x_perm <- x_pooled[permutation]
+    x1_perm <- x_perm[1:n1]
+    x2_perm <- x_perm[(n1+1):n]
+    # test statistic:
+    T_stat[perm] <- max(c(median(x2_perm)/ median(x1_perm),
+                          mad(x2_perm) / mad(x1_perm)
+                          )
+      )
+    
+  }
+  
+  # p-value
+  if (plot){
+      hist(T_stat,xlim=range(c(T_stat,T0)))
+    abline(v=T0,col=3,lwd=4)
+    
+  }
+
+  p_val <- sum(T_stat>=T0)/iter
+  return(p_val)
+}
+set.seed(1909)
+# case of different variance
+perm_t_test(x=rstable(30,1.5,0), y=rstable(30,1.5,0)+runif(30, min=-15, max=15), iter=1e3)
+# case of different mean
+perm_t_test(x=rstable(30,1.5,0), y=rstable(30,1.5,0)+10, iter=1e2)
+# case of different both
+perm_t_test(x=rstable(30,1.5,0), y=rstable(30,1.5,0)+10+runif(30, min=-15, max=15), iter=1e2)
+
+
+```
+Naturally, the power depends on your choice of your test statistic. Yet its type I error should be the nominal one, i.e. $\alpha$.
+
+```{r}
+
+
+p.value <- numeric(B)
+set.seed(20)
+n = 30
+sigma = 1
+for(j in 1:B){
+  # sample from the normal distribution
+  x1 <- rnorm(n,sd=sigma)
+  x2 <- rnorm(n,sd=sigma)
+  p.value[j] <- perm_t_test(x=x1, y=x2, iter=100, plot=F)
+}
+hist(p.value)
+```
+and indeed we get the expected uniform distribution for a test repeated $B$ times with the null being true. 
+
+
+
 
 
 
